Replace stylesheet and script references in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="blog.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header><b>Rainwater Harvesting</b> <br><b> A Sustainable Solution for Water Conservation</b> </header>
@@ -74,7 +74,7 @@
     <h2 id="conclusion">Conclusion</h2>
     <p>Rainwater harvesting represents a viable and sustainable approach to managing water resources in an increasingly challenged world. By capturing and utilizing rainwater, we can conserve freshwater, reduce environmental impacts, and enhance resilience against water shortages. While there are challenges to address, the benefits of rainwater harvesting make it a valuable tool in the pursuit of sustainable water management. As we continue to confront global water issues, embracing and promoting rainwater harvesting can play a crucial role in ensuring a more secure and sustainable future.</p>
 </section>
-<script src="blog.js"></script>
+<script src="script.js"></script>
 </body>
 </body>
 </html>
