Update image source for Rainwater Harvesting section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </section>
         <section>
             <h2>Rainwater Harvesting System Set-up</h2>
-            <img src="roof top.jpeg" width="500px"><br>
+            <img src="https://www.treehugger.com/thmb/BRO27DxD2dfKgDUGHqCTWgrSE7Q=/2250x0/filters:no_upscale():max_bytes(150000):strip_icc()/beginners-guide-to-rainwater-harvesting-5089884_V3-d4a6f6a568fc4f348598d9b98f96b6b7.png" width="500px"><br>
         </section>
         <section>
             <h2 id="methods">Methods of Rainwater Harvesting</h2>
